--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "helmet": "^6.0.0",
-    "moongoose": "^0.0.5",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
 }
