--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server/app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
